style.css
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

@keyframes flicker {
  0% {
    opacity: 0.27861;
  }

  5% {
    opacity: 0.34769;
  }

  10% {
    opacity: 0.23604;
  }

  15% {
    opacity: 0.90626;
  }

  20% {
    opacity: 0.18128;
  }

  25% {
    opacity: 0.83891;
  }

  30% {
    opacity: 0.65583;
  }

  35% {
    opacity: 0.67807;
  }

  40% {
    opacity: 0.26559;
  }

  45% {
    opacity: 0.84693;
  }

  50% {
    opacity: 0.96019;
  }

  55% {
    opacity: 0.08594;
  }

  60% {
    opacity: 0.20313;
  }

  65% {
    opacity: 0.71988;
  }

  70% {
    opacity: 0.53455;
  }

  75% {
    opacity: 0.37288;
  }

  80% {
    opacity: 0.71428;
  }

  85% {
    opacity: 0.70419;
  }

  90% {
    opacity: 0.7003;
  }

  95% {
    opacity: 0.36108;
  }

  100% {
    opacity: 0.24387;
  }
}

@keyframes textShadow {
  0% {
    text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5), -0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  5% {
    text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5), -2.7928974010788217px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  10% {
    text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5), -0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  15% {
    text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5), -0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  20% {
    text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5), -3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  25% {
    text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5), -1.6125630401149584px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  30% {
    text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5), -0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  35% {
    text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5), -3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  40% {
    text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5), -3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  45% {
    text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5), -2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  50% {
    text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5), -0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  55% {
    text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5), -2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  60% {
    text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5), -2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  65% {
    text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5), -2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  70% {
    text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5), -0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  75% {
    text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5), -1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  80% {
    text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5), -0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  85% {
    text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5), -0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  90% {
    text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5), -3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  95% {
    text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5), -2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }

  100% {
    text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5), -2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
  }
}

body::after {
  content: " ";
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(18, 16, 16, 0.1);
  opacity: 0;
  z-index: 2;
  pointer-events: none;
  animation: flicker 0.15s infinite;
}

body::before {
  content: " ";
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
  z-index: 2;
  background-size: 100% 2px, 3px 100%;
  pointer-events: none;
}

html::before {
  content: " ";
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  /* background-image:url(https://i.imgur.com/jonBE7c.png); */
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  z-index: 100000;
  border-left: 1rem solid;
  border-right: 1rem solid;
  border-bottom: 3.5rem solid;
  border-top: 1rem solid;
  border-color: #d8d8be #eeeee3 #dfdfcb;
  pointer-events: none;
}

html {
  height: 100%;
  overflow: hidden;
}

body {
  filter: grayscale(100%) sepia(100%) hue-rotate(75deg);
  background-color: #212121;
  color: #979fb1;
  font-size: 0.875rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
  font-family: 'Ubuntu Mono', monospace !important;
  /* animation: textShadow 0.8s infinite; */
}

.container-hero {
  margin: 0 1.5rem!important;
  position: relative;
  text-align:center;
  color: #f1f2f3;
  text-shadow: 3px 4px 5px #111314;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 1;
}

.container-hero h1{
  margin: 1rem 0 0 0;
  font-size: 1.25rem;
  font-weight: 800;
}

.container-hero h2{
  margin-top: 0.5rem 0 0 0;
  font-size: 1rem;
  font-weight: 600;
}

.container-hero p{
  margin-top: 1rem 0 0 0!important;
  font-size: 0.875rem;
  font-weight: 500;
}

.img-hero-md {
  height: 4rem;
  
}

a {
  color: #737e8a;
}

a:hover,
a:active,
.blog-entry .kudos-btn:hover,
.blog-entry .kudos-btn:active {
  color: #bfe586;
  background-color: rgba(255, 255, 255, 0.2);
  text-decoration: none !important;
}

nav .top,
nav .links,
main,
footer {
  background: none;
}

ul {
  padding: 1rem 0;
  margin: 0;
}

li {
  display: block;
}

button {
  background: none;
  border: none;
}

/* Modal Styles */
.modal {
  display: none;
  /* Hidden by default */
  position: fixed;
  z-index: 9999;
  /* On top of other elements */
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  /* Semi-transparent background */
  backdrop-filter: blur(0.5rem);
}

.modal-content {
  background-color: #111314;
  display: flex;
  flex-direction: column;
  top: 50%;
  transform: translate(0, -50%);
  margin:0 auto;
  padding: 2rem 1.5rem;
  border-radius: 1rem;
  width: 80%;
  max-width: 600px;
  /* Not too wide */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.modal-head {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  align-items: flex-end;
  padding-bottom: 1rem;
  border-bottom: 1px solid;
}

.modal-content h3 {
  margin-top: 0;
}

.modal-content li {
  display:flex;
  margin: 0 0 0.75rem 0;
  padding: 0.75rem;
  border: 2px #737e8a solid;
  border-radius: 8px;
  flex-direction: row;
  justify-content:flex-start;
}
.modal-list-row-textgroup {
  display:flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
}
.modal-content a {
  text-decoration: none;
  font-size: 1.25rem;
  color: #dee0e3;
  font-weight: bold;
}

.modal-content p{
font-size: 0.875rem;
color: #88929c;
}

.modal-list-row {
  height: 48px;
  width: 48px;
  margin-right: 1rem;
}

.close-btn {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
  cursor: pointer;
}




/* Spline Styles */
.spline-bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
}

/* Footer */
.footer-container {
  position: absolute;
  bottom: 4rem;
  text-align: center;
  z-index: 8;
  margin: 0 !important;
}

.footer {
  content: "";
  color: #979fb1;
  font-size: 1rem;
  margin: 0;
}

.footer a{
  font-size: 1rem;
  font-weight: bold;
}

@media screen and (max-width:1064px) {
  html::before {
    border-left: 1rem solid;
    border-right: 1rem solid;
    border-bottom: 3.5rem solid;
    border-top: 1rem solid;
    border-color: #d8d8be #eeeee3 #dfdfcb;
  }

  .footer-container {
    position: absolute;
    bottom: 4rem;
    text-align: center;
    z-index: 8;
  }
}

@media screen and (max-width:520px) {
  html::before {
    border-left: 1rem solid;
    border-right: 1rem solid;
    border-bottom: 3.5rem solid;
    border-top: 1rem solid;
    border-color: #d8d8be #eeeee3 #dfdfcb;
  }

  p {
    font-size: 0.75rem;
  }

  .command {
    font-size: 0.875rem;
    line-height: 1;
  }

  .footer-container {
    position: absolute;
    bottom: 4rem;
    text-align: center;
    z-index: 8;
  }

  .footer {
    font-size: 0.75rem;
  }

  @keyframes flicker {
    0% {}
  }

  @keyframes textShadow {
    0% {}
  }

